<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Molvix</string>
    <string name="title_home">Series</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="search_movies">Search Series</string>
    <string name="download">DOWNLOAD</string>
    <string name="admob_app_id">ca-app-pub-6135856587983989~3935873179</string>
    <string name="banner_release_ad_unit_id">ca-app-pub-6135856587983989/1197835674</string>
    <string name="native_release_ad_unit_id">ca-app-pub-6135856587983989/4094342197</string>
    <string name="rewarded_video_release_ad_unit_id">ca-app-pub-6135856587983989/1627130374</string>
    <string name="sorry_no_result_found">Sorry, no result found</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="play">PLAY</string>
    <string name="please_wait">Please wait…</string>
    <string name="preparing">PREPARING…</string>
    <string name="downloading">DOWNLOADING…</string>
    <string name="Today">Today</string>
    <string name="molvix_app_version">molvix_app_version</string>
    <string name="bitcoin_address">3Cu2aLnPRyoW86bj3QnzzmUEeu1SFK2xYB</string>
    <string name="daily_movie_recommendation_key">daily_movie_recommendation_key</string>
    <string name="donation_key">donation_key</string>
    <string name="third_party_software_attr">third_party_software_attr</string>
    <string name="feedback_key">feedback_key</string>
    <string name="wallet_reception_disclaimer">This wallet address accepts only Bitcoins and not Bitcoin-Cash.\nThanks for your support</string>
    <string name="donation_view">donations_view_key</string>
    <!-- DateUtils -->
    <string name="DateUtils_just_now">Just now</string>
    <string name="DateUtils_minutes_ago">%d min</string>
    <string name="DateUtils_today">Today</string>
    <string name="DateUtils_yesterday">Yesterday</string>

    <!-- plurals.xml -->
    <plurals name="hours_ago">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <!-- DeviceListItem -->
    <string name="DeviceListItem_unnamed_device">Unnamed device</string>
    <string name="DeviceListItem_linked_s">Linked %s</string>
    <string name="DeviceListItem_last_active_s">Last active %s</string>
    <string name="DeviceListItem_today">Today</string>
    <string name="text_notification">Notification</string>
    <string name="text_notification_custom">Notification Custom</string>
    <string name="text_title">Title</string>
    <string name="text_message">Message</string>
    <string name="text_description_image_icon">Small Icon</string>
    <string name="text_description_image_background">Background</string>
    <string name="key_voice_reply">extra_voice_reply</string>
    <string name="label_voice_reply">Reply</string>
    <string name="downloaded_movies_update_key">downloaded_movies_update_key</string>
    <string name="season">Season</string>
    <string name="network_error_msg">Network error\n.Please review your data connection and tap here to try again.</string>
    <string name="loading_msg">Loading…</string>
    <string name="no_notifications">No notifications</string>
    <string name="all_caught_up">All Caught Up!</string>
    <string name="paused">Paused</string>
    <string name="your_favourite_tv_series_at_your_fingertips">Your favourite TV Series at Your fingertips</string>
    <string name="new_update_available_text">A new version of Molvix is Available for Download.\n This Update contains very important bug fixes.\n It\'s mandatory that you update.</string>
    <string name="update">UPDATE</string>
    <string name="no_downloaded_videos">Downloaded videos would show up here</string>
    <string name="title_downloaded_videos">Downloads</string>
    <string name="theme_key">theme_pref_key</string>
    <string name="loading">Loading…</string>
    <string name="directory_empty_msg">Sorry, no content was found in this directory</string>
    <string name="download_coins">download_coins</string>
    <string name="clear_data">CLEAR DATA</string>
    <string name="clear_data_consent">When you tap on Clear Data, only application specific data would be cleared. If you however also wish to force-delete all of your downloaded videos, check the box below as well.</string>
    <string name="also_delete_video_check_msg">Also delete all my downloaded videos</string>
    <string name="new_">New</string>
    <string name="show_newest_series">Latest Series</string>
    <string name="filter_by_genre">Genres</string>
    <string name="enter_text_shown_title">Enter Text Shown Above</string>
    <string name="text_input_error_message">Empty or invalid characters detected</string>
    <string name="download_error">Download Error!</string>
    <string name="try_again">Try Again</string>
    <string name="free_series_downloader">FREE Series Downloader</string>
    <string name="contact_permission">Allow Molvix to access your contacts</string>
    <string name="sms_permission">Allow Molvix to send and receive one time SMS</string>
    <string name="storage_permission">Allow Molvix to download and save movies</string>
    <string name="read_sms_permission">Allow Molvix to send and receive one time SMS</string>
    <string name="location_permission">To enjoy all features of Molvix, please allow access to your location.</string>
    <string name="phone_state_permission">Allow Molvix to read your phone state.</string>
    <string name="phone_call_permission">Allow Molvix to make a one time phone call</string>
    <string name="phone_camera_permission">Allow Molvix to access your camera</string>
    <string name="record_audio">Allow Molvix to record audio</string>
    <string name="access_wifi">Allow Molvix to know when WIFI is on or off</string>
    <string name="access_phone_state">Allow Molvix to access your phone state.</string>
    <string name="access_network_state">Allow Molvix to access your network state.</string>
    <string name="a_to_z">A-Z</string>
    <string-array name="reply_choices">
        <item>Yes</item>
        <item>No</item>
        <item>Maybe</item>
    </string-array>
    <string-array name="download_options">
        <item>Highest Quality</item>
        <item>Standard Quality</item>
        <item>Lowest Quality</item>
    </string-array>
    <string name="dont_show_again">Don\'t show again</string>

    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
    <string name="title">Title</string>
    <string name="close_dialog">Close Dialog</string>
</resources>